    cookie file is specified. (Patch from Scott Wehrenberg
    <wehresj@auburn.edu>)
    (closes: #161741)
  * fortune/fortune.c: Exit cleanly on bad patterns instead of segfaulting.
    (Patch from Scott Wehrenberg <wehresj@auburn.edu>)
    (closes: #191647)
  * fortune/fortune.c: Don't search the local directory for languages
    (closes: #159095)

 -- Pascal Hakim <pasc@debian.org>  Sat, 14 Jun 2003 01:10:10 +1000

fortune-mod (9708-28) unstable; urgency=low

  * Fixed broken encoding characters (patch from Sam Hocevar 
    <sam@zoy.org>)
    (closes: #188884)

 -- Pascal Hakim <pasc@debian.org>  Tue, 20 May 2003 23:45:32 +1000

fortune-mod (9708-27) unstable; urgency=low

  * Fixed -f to provide correct filenames 
    (closes: #156195)
  * Fixed -e to provide correct percentages, when some percentages
    are supplied on the command line. (patch from Michal 
    Politowski <mpol@charybda.icm.edu.pl>)
    (closes: #157197)
  * Fixed Garrison Keillor quote in "ethnic"
    (closes: #159273)
  * Removed non-fortune from James Troup on debian's bug tracking
    system in "linux"
    (closes: #160252)
  * Fixed attribution, and wording from Mark Twain to Oscar Wilde
    in "paradoxum"
    (closes: #171910)
  * Don't choke when all files are empty. (patch from Aurelien 
    Jarno <aurel32@debian.org>)
    (closes: #176032)
  * Fixed quoting, and attribution in "work", and removed duplicate 
    in "cookie"
    (closes: #176623)
  * Moved two translated quotes from "translate-me" to "people" and
    "science", and added attribution to Albert Einstein
    (closes: #182612)
  * Moved some translated quotes from "translate-me" to "wisdom"
    (closes: #182623)
  * Removed duplicate from "people", left copy in "science"
    (closes: #182623)
  * Removed duplicate from "science"
    (closes: #182625)
  * Added missing help in a quote in "work"
    (closes: #192811)
  * Made the 'nohup rm -fr /&' fortune slightly more obvious, in
    "computer"
    (closes: #149400)